--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: center;
+  background-color: #222;
+  height: 97vh;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /* animation: App-logo-spin infinite 20s linear; */
+  height: 40px;
 }
 
 .App-header {
@@ -12,14 +14,50 @@
   height: 150px;
   padding: 20px;
   color: white;
+  width: 50%;
+}
+
+.translations {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.service-content {
+  background-color: #222;
+  height: 400px;
+  padding: 20px;
+  color: white;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .App-intro {
   font-size: large;
+  background-color: white;
+}
+
+.selected {
+    border: #ddd solid 2px;
+}
+
+.branches {
+    display: flex;
+    border-bottom: solid white 1px;
+}
+
+.br {
+    border-right: .5px white solid;
+}
+
+.bl {
+    border-left: .5px white solid;
+}
+
+.white-text {
+    color: white;
 }
 
 @keyframes App-logo-spin {
